--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,6 +1,7 @@
 <h1>ToDo</h1>
-<ul>
 <% @tasks.each do |task| %>
-  <li><%= task.title %></li>
+  <p>
+    <%= task.id %>
+    <%= task.title %>
+  </p>
 <% end %>
-</ul>
